--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -638,4 +637,56 @@ function importData(event) {
             alert('Erreur lors de l\'importation du fichier. Assurez-vous que le format est correct.');
         }
     };
-    reader.readAsText(fil
+    reader.readAsText(file);
+    event.target.value = '';
+}
+
+function handleSearchInput(event) {
+    searchTerm = event.target.value;
+    renderRegulations();
+}
+
+function handleCategoryFilter(event) {
+    if (event.target.classList.contains('category-filter')) {
+        document.querySelectorAll('.category-filter').forEach(filter => filter.classList.remove('active'));
+        event.target.classList.add('active');
+        activeFilter = event.target.dataset.category;
+        renderRegulations();
+    }
+}
+
+function resetArticleForm() {
+    document.getElementById('articleCategory').value = '';
+    document.getElementById('articleReference').value = '';
+    document.getElementById('articleText').value = '';
+    document.getElementById('rtsLink').value = '';
+    document.getElementById('itsLink').value = '';
+    document.getElementById('level1Link').value = '';
+    document.getElementById('formError').textContent = '';
+    toggleConditionalFields();
+}
+
+function resetAll() {
+    const confirmReset = confirm('⚠️ ATTENTION : Vous êtes sur le point de réinitialiser TOUTE l\'application et supprimer TOUTES les données. Cette action est irréversible. Voulez-vous vraiment continuer ?');
+   
+    if (confirmReset) {
+        // Reset des données
+        regulations = initializeRegulations();
+        // Sauvegarde du nouvel état
+        autoSave();
+        // Reset du formulaire
+        resetArticleForm();
+        // Mise à jour de l'affichage
+        renderRegulations();
+    }
+}
+
+document.addEventListener('DOMContentLoaded', () => {
+    autoLoad();
+    document.getElementById('searchInput').addEventListener('input', handleSearchInput);
+    document.getElementById('categoryFilters').addEventListener('click', handleCategoryFilter);
+    renderRegulations();
+});
+</script>
+</body>
+</html>
