--- a/index.html
+++ b/index.html
@@ -3725,6 +3725,148 @@ function createRegulationElement(regulation) {
 
     return element;
 }
+
+// Variables globales pour le suivi des statistiques
+let globalStats = {
+    totalItems: 0,
+    visibleItems: 0,
+    compliantCount: 0,
+    inProgressCount: 0,
+    complianceRate: 0
+};
+
+function updateMetadata(currentBatch) {
+    // Mise à jour des statistiques pour le lot actuel
+    let batchStats = currentBatch.reduce((stats, reg) => {
+        // Compter les éléments par statut
+        if (reg.status === 'Compliant') {
+            stats.compliantCount++;
+        } else if (reg.actions && reg.actions.some(action => action.percentage > 0)) {
+            stats.inProgressCount++;
+        }
+
+        // Calculer le taux de conformité pour cet élément
+        if (reg.status !== 'Non Applicable' && reg.status !== 'Documentation') {
+            stats.applicableCount++;
+            if (reg.status === 'Compliant') {
+                stats.complianceTotal += 100;
+            } else if (reg.actions.length > 0) {
+                const avgProgress = reg.actions.reduce((sum, action) => 
+                    sum + (action.percentage || 0), 0) / reg.actions.length;
+                stats.complianceTotal += avgProgress;
+            }
+        }
+
+        return stats;
+    }, {
+        compliantCount: 0,
+        inProgressCount: 0,
+        applicableCount: 0,
+        complianceTotal: 0
+    });
+
+    // Mettre à jour les statistiques globales
+    globalStats.totalItems = regulations.length;
+    globalStats.visibleItems = currentBatch.length;
+    globalStats.compliantCount = batchStats.compliantCount;
+    globalStats.inProgressCount = batchStats.inProgressCount;
+    
+    // Calculer le taux de conformité
+    const complianceRate = batchStats.applicableCount > 0 
+        ? (batchStats.complianceTotal / batchStats.applicableCount).toFixed(1) 
+        : '0.0';
+
+    // Mettre à jour l'interface
+    updateUI(complianceRate, batchStats);
+}
+
+function updateUI(complianceRate, stats) {
+    // Mettre à jour le taux de conformité
+    const complianceElement = document.querySelector('.compliance-rate');
+    if (complianceElement) {
+        complianceElement.textContent = `Taux de conformité: ${complianceRate}%`;
+    }
+
+    // Mettre à jour le compteur d'éléments visibles
+    const countElement = document.createElement('div');
+    countElement.className = 'items-count';
+    countElement.textContent = `Affichage de ${globalStats.visibleItems} sur ${globalStats.totalItems} éléments`;
+    
+    // Insérer le compteur après le taux de conformité
+    if (complianceElement && !document.querySelector('.items-count')) {
+        complianceElement.insertAdjacentElement('afterend', countElement);
+    }
+
+    // Mettre à jour les badges de statut
+    updateStatusBadges(stats);
+}
+
+function updateStatusBadges(stats) {
+    const badges = {
+        compliant: `<span class="badge badge-success">Compliant: ${stats.compliantCount}</span>`,
+        inProgress: `<span class="badge badge-warning">En cours: ${stats.inProgressCount}</span>`,
+        total: `<span class="badge badge-info">Total visible: ${globalStats.visibleItems}</span>`
+    };
+
+    // Créer ou mettre à jour le conteneur de badges
+    let badgesContainer = document.querySelector('.status-badges');
+    if (!badgesContainer) {
+        badgesContainer = document.createElement('div');
+        badgesContainer.className = 'status-badges';
+        document.querySelector('.header').appendChild(badgesContainer);
+    }
+
+    badgesContainer.innerHTML = Object.values(badges).join('');
+}
+
+// Style pour les nouveaux éléments
+const metadataStyles = `
+    .items-count {
+        color: var(--gray-600);
+        font-size: 0.875rem;
+        margin-bottom: var(--space-4);
+    }
+
+    .status-badges {
+        display: flex;
+        gap: var(--space-2);
+        margin-bottom: var(--space-4);
+        flex-wrap: wrap;
+    }
+
+    .badge {
+        padding: var(--space-1) var(--space-2);
+        border-radius: var(--radius-sm);
+        font-size: 0.75rem;
+        font-weight: 500;
+    }
+
+    .badge-success {
+        background-color: var(--success-50);
+        color: var(--success-600);
+    }
+
+    .badge-warning {
+        background-color: var(--warning-50);
+        color: var(--warning-600);
+    }
+
+    .badge-info {
+        background-color: var(--primary-50);
+        color: var(--primary-600);
+    }
+`;
+
+// Ajouter les styles
+function addMetadataStyles() {
+    const style = document.createElement('style');
+    style.textContent = metadataStyles;
+    document.head.appendChild(style);
+}
+
+// Initialisation
+document.addEventListener('DOMContentLoaded', addMetadataStyles);
+
 </script>
 </body>
 </html>
